2007-11-11  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/sourcefactories.py:
	If the system isn't icon-theme-spec compliant, load pixbufs the old way
	using shipped pngs.
	Fixes #461913

2007-10-21  Edward Hervey  <bilboed@bilboed.com>

	* RELEASE:
	Add new dependencies
	* pitivi/settings.py:
	getVideoCaps() and getAudioCaps() now return intersection of
	configured settings AND corresponding encoder sink caps.
	* pitivi/timeline/objects.py:
	Add a mode to force setting start/duration on the gnlobject.
	Fixes a stupid bug with cutting.
	* pitivi/timeline/source.py:
	Fix debugging
	* pitivi/ui/viewer.py:
	Fix debugging.
	Only set XID on videosink widget if it is exposed in order to avoid
	X errors.

2007-10-18  Brandon Lewis  <brandon_lewis@berkeley.edu>

	reviewed by: <delete if not using a buddy>

	* tests/test_file_load_save.py:
	updated test cases

2007-10-17  Brandon Lewis  <brandon_lewis@berkeley.edu>

	reviewed by: <delete if not using a buddy>

	* pitivi/project.py:
	redefined prototype for save-uri-requested signal -- uri, format
	made changes to application logic, which was buggy
	now passed into method call setUri()
	* pitivi/projectsaver.py:
	added some more classmethods for working with projectSaver derivatives
	* pitivi/ui/mainwindow.py:
	implemented file type filters in in open and save dialogs.

	Note: this code breaks some test cases relating to the applicaiton
	logic, but appears to work properly. Want to get changes to
	server, will debug the application logic in next commit.

2007-10-14  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac:
	Back to development cycle.

=== release 0.11.0 ===

2007-10-14  Edward Hervey  <bilboed@bilboed.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	Releasing 0.11.0 "A hooligan's game played by gentlemen"

2007-10-14  Edward Hervey  <bilboed@bilboed.com>

	* AUTHORS:
	* pitivi/ui/mainwindow.py:
	Add Thijs Vermeir to the list of contributors

2007-10-14  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/bin.py: